testdata/baselines/reference/tests_cases_compiler_contextuallyTypedParametersWithQuestionToken.ts.ast
SourceFile
  FunctionDeclaration
    Identifier: ' acceptNum'
    Parameter
      Identifier: 'num'
      NumberKeyword
    Block
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' f1'
        FunctionType
          Parameter
            Identifier: 'a'
            StringKeyword
          Parameter
            Identifier: ' b'
            NumberKeyword
          VoidKeyword
        FunctionExpression
          Identifier: ' self'
          Parameter
            Identifier: 'a'
          Parameter
            Identifier: ' b'
            QuestionToken
          Block
            ExpressionStatement
              CallExpression
                Identifier: '
  acceptNum'
                Identifier: 'b'
            ExpressionStatement
              CallExpression
                Identifier: ' // error
  self'
                StringLiteral
            ExpressionStatement
              CallExpression
                Identifier: '
  self'
                StringLiteral
                Identifier: ' undefined'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' f2'
        FunctionType
          Parameter
            Identifier: 'a'
            StringKeyword
          Parameter
            Identifier: ' b'
            NumberKeyword
          VoidKeyword
        FunctionExpression
          Identifier: ' self'
          Parameter
            Identifier: 'a'
          Parameter
            Identifier: ' b'
            QuestionToken
            NumberKeyword
          Block
            ExpressionStatement
              CallExpression
                Identifier: '
  acceptNum'
                Identifier: 'b'
            ExpressionStatement
              CallExpression
                Identifier: ' // error
  self'
                StringLiteral
            ExpressionStatement
              CallExpression
                Identifier: '
  self'
                StringLiteral
                Identifier: ' undefined'
